fix(user): remediate x-axis overflow on completion progress (#1385)

--- a/resources/css/legacy.css
+++ b/resources/css/legacy.css
@@ -105,6 +105,7 @@
 #usercompletedgamescomponent {
   max-height: 30.0em;
   overflow-y: auto;
+  overflow-x: hidden;
 }
 
 #devstatsscrollpane {
